[gd_scene format=3 uid="uid://bnf23e41dprfh"]

[ext_resource type="Script" uid="uid://djt5varnl7su1" path="res://scripts/menu.gd" id="1_u81ku"]
[ext_resource type="Texture2D" uid="uid://bim3u6yxyy3wn" path="res://textures/bgs/menu_bg.png" id="2_2un8v"]
[ext_resource type="FontFile" uid="uid://ckn860qeuoe4s" path="res://fonts/PixelMaster.ttf" id="3_2un8v"]

[node name="menu" type="CanvasLayer" unique_id=81474863]
script = ExtResource("1_u81ku")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1200394602]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2un8v")
expand_mode = 3

[node name="ColorRect" type="ColorRect" parent="." unique_id=1019657308]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.59607846)

[node name="menu" type="Control" parent="." unique_id=1662024094]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="menu" unique_id=1089514598]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -25.0
offset_right = 30.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="new_game_button" type="Button" parent="menu/VBoxContainer" unique_id=1958340941]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2un8v")
text = "New Game"
metadata/_edit_use_anchors_ = true

[node name="load_game_button" type="Button" parent="menu/VBoxContainer" unique_id=132519748]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2un8v")
text = "Load Game"
metadata/_edit_use_anchors_ = true

[node name="difficulties" type="Control" parent="." unique_id=1090422321]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="easy_button" type="Button" parent="difficulties" unique_id=2012507709]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -11.5
offset_right = -11.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_2un8v")
text = "Easy"

[node name="hard_button" type="Button" parent="difficulties" unique_id=399569356]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = -11.5
offset_right = 49.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_2un8v")
text = "Hard"

[connection signal="pressed" from="menu/VBoxContainer/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/load_game_button" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="difficulties/easy_button" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="difficulties/hard_button" to="." method="_on_hard_button_pressed"]
